--- a/jsp_servlet/implicitObject/web/css/style.css
+++ b/jsp_servlet/implicitObject/web/css/style.css
@@ -38,6 +38,8 @@ main div {
     color: black;
     font-family: 'Source Sans Pro', sans-serif;
     text-align: center;
+
+    height: auto;
 }
 
 main p {
